MEjora en la estructura